# jumanji-benchmarks

./: .containerignore  .gitignore  LICENSE  README.md  asv.conf.json  dockerfile  hashes.txt  pyproject.toml
jumanji_benchmarks/: benchmarks.py  dashboard.py  data.py  settings.py  test_runners.py  types.py  visuals.py
jumanji_benchmarks/assets/: style.css
jumanji_benchmarks/pages/: commits.py  home.py  platforms.py  wrappers.py
jumanji_perf/: benchmarks.py  dashboard.py  runners.py  test_runners.py  types.py  visuals.py
jumanji_perf/assets/: style.css
jumanji_perf/pages/: commits.py  home.py  platforms.py  wrappers.py
results/: benchmarks.json
results/aa-desktop/: 02c8bec2-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  02c8bec2-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  04d7e714-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  04d7e714-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  11874c0a-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  11874c0a-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  1a5123cb-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  1a5123cb-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  2e9f0186-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  2e9f0186-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  2e9f0186-virtualenv-py3.11-dash-pandas-pytest-JAX_PLATFORM_NAMEcpu.json  2e9f0186-virtualenv-py3.11-dash-pandas-pytest-JAX_PLATFORM_NAMEcuda.json  32ec5aec-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  32ec5aec-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  50035636-virtualenv-py3.11-JAX_PLATFORM_NAMEcpu.json  50035636-virtualenv-py3.11-JAX_PLATFORM_NAMEcuda.json  (+65 more)
